Replaced Add Components with Default Components

--- a/src/app/pm-portal/analysis/analysis.component.html
+++ b/src/app/pm-portal/analysis/analysis.component.html
@@ -2,23 +2,23 @@
 
     <ul class="list-inline">
         <li class="list-inline-item nav-item">
-            <a routerLink="/projects/analysis/stacked-vertical-bar-chart" 
+            <a routerLink="/org/analysis/stacked-vertical-bar-chart" 
                 class="nav-link" routerLinkActive="active">
                     Task Status Analysis
             </a>
         </li>
 
         <li class="list-inline-item nav-item">
-            <a routerLink="/projects/analysis/number-card-chart" 
+            <a routerLink="/org/analysis/number-card-chart" 
                 class="nav-link" routerLinkActive="active">
-                    Number Card Chart
+                    Task Status Breakdown
             </a>
         </li>
 
         <li class="list-inline-item nav-item">
-            <a routerLink="/projects/analysis/horizontal-bar-chart" 
+            <a routerLink="/org/analysis/horizontal-bar-chart" 
                 class="nav-link" routerLinkActive="active">
-                    Horizontal Bar Chart
+                    User Tasks Breakdown
             </a>
         </li>
         
