--- a/src/app/pm-portal/users/users.component.html
+++ b/src/app/pm-portal/users/users.component.html
@@ -1,1 +1,11 @@
-<p>users works!</p>
+<div class="row">
+
+    <div class="col-md-5">
+        <app-users-list></app-users-list>
+    </div>
+
+    <div class="col-md-7">
+        <app-user-details></app-user-details>
+    </div>
+
+</div>
