--- a/src/app/pm-portal/projects/project-details/project-edit/project-edit.component.html
+++ b/src/app/pm-portal/projects/project-details/project-edit/project-edit.component.html
@@ -1,1 +1,36 @@
-<p>project-edit works!</p>
+<div class="row pmp-compact fit-half-panel-width list-group-item">
+    <div class="col-md-12">
+  
+      <form class="pmp-compact" [formGroup]="projectForm" (ngSubmit)="onSubmit()">
+  
+        <!-- Name -->
+        <div class="form-group">
+          <label class="small font-weight-bold" for="name">Name</label>
+          <textarea id="name" rows="3" formControlName="name" class="form-control form-control-sm" placeholder="Enter a title for this Project up to 1000 characters in length">
+          </textarea>
+          <span class="help-block alert-warning" 
+            *ngIf="!projectForm.get('name').valid && projectForm.get('name').touched" >
+            Please enter a valid name text!</span>
+        </div>
+  
+        <!-- Description -->
+        <div class="form-group">
+          <label class="small font-weight-bold" for="description">Description</label>
+          <textarea id="description" rows="12" [formControlName]="['description']" 
+            class="form-control form-control-sm" 
+            placeholder="Enter a description of this Project up to 10,000 characters in length">
+          </textarea>
+          <span *ngIf="!projectForm.get('description').valid && projectForm.get('description').touched"
+            class="help-block alert-warning">Please enter a valid description!</span>
+        </div>
+  
+  
+        <!-- Submit/Cancel Buttons -->
+        <div class="btn-group-sm">
+          <button class="btn btn-primary btn-sm" type="submit" [disabled]="!projectForm.valid">Submit</button>
+          <button class="btn btn-warning btn-sm"  style="margin-left: 5px;" (click)="onCancel()">Cancel</button>
+        </div>
+  
+      </form>
+    </div>
+  </div>
