--- a/src/app/pm-portal/projects/projects.component.html
+++ b/src/app/pm-portal/projects/projects.component.html
@@ -1,10 +1,10 @@
 <div class="row">
 
-    <div class="col-md-5 redbox">
+    <div class="col-md-5">
         <app-projects-list></app-projects-list>
     </div>
 
-    <div class="col-md-7 bluebox">
+    <div class="col-md-7">
         <app-project-details></app-project-details>
     </div>
 
